--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-card {
+  background: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 465px;
+  height: 800px; /* Ajusta la altura según tus necesidades */
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center; /* Ajusta el margen superior si es necesario */
 }
 
-.App-link {
-  color: #61dafb;
+.login-img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 0 0 50px 50px;
+  background-color: #3c2c54;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.login-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+img.avion {
+  position: absolute;
+  top: 280px;
+  filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.309));
+  width: 300px;
+  height: auto;
+}
+
+.titulo{
+  color: #3c2464;
+  padding-top: 10rem;
+  padding-bottom: 10px;
+  font-size: 47px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.normal {
+  font-weight: normal;
+}
+
+.login-btn {
+  width: 180px; 
+  padding: 10px; 
+  margin: 8px 0; 
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  background-color: #f0f0f0; 
+  cursor: pointer;
+  border:none ; 
+  font-weight: bold;
+  background-color: #3c2464;
+  color: #fff;
+}
+
+.btn2{
+  background-image: linear-gradient(to right, #9c5fff, #6c59a6);
+
+}
+
+.btn2:hover{
+  background-image: linear-gradient(to right, #644599, #7660b6);
+  transition: 1s;
+}
+
+.login-btn:hover {
+  background-color:#6d4f99;
+  transition: 0.3s;
+}
+
+.help{
+  font-size: 13px;
+  color: #b9b6cc;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
+@media only screen and (max-width: 1621px){
+  img.avion{
+    top: 233px;
+    width: 300px;
   }
 }
+
+@media only screen and (max-width: 375px) {
+
+  .login-card {
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 325px;
+    height: auto;
+    border:none;
+    border-radius: 0;
+    box-shadow: none;
+    text-align: center;
+    margin-top: -20px;
+  }
+
+  .login-img {
+    max-height: 280px;
+    width: 120%;
+    border-radius: 0 0 70px 70px;
+  }
+  
+  img.avion{
+    top: 152px;
+    width: 230px;
+
+  }
+
+  .titulo {
+    font-size: 40px; 
+    padding-top: 5rem; 
+  }
+}
+
+
+
+
+
